# selara

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: audio.rs  main.rs  types.rs  ui.rs
