[package]
name = "selara"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A real-time audio spectrum analyzer and visualizer built in Rust with a terminal-based user interface"

[dependencies]
anyhow = "1.0.99"
cpal = "0.16.0"
crossbeam-channel = "0.5.15"
crossterm = "0.28"
ctrlc = "3.4.7"
ratatui = "0.29"
realfft = "3.0.0"
